<resources>
    <string name="scringo_text_activity_share">Turning this off means that your activities in this app will not be shared with other app users. We will never ever auto-post on your behalf to your social accounts even if this privacy setting is On.</string>
    <string name="scringo_text_anonymous_activity_message">Connect with Facebook or Twitter to interact with other people on %s</string>
    <string name="scringo_text_anonymous_message">Connect with Facebook or Twitter to message other people on %s</string>
    <string name="scringo_text_anonymous_no_messages_title">There are no messages.</string>
    <string name="scringo_text_bio_text">Write something about yourself</string>
    <string name="scringo_text_block_user_message">Are you sure you want to block %s?</string>
    <string name="scringo_text_block_user_title">Block User</string>
    <string name="scringo_text_blocked_title">Blocked</string>
    <string name="scringo_text_cancel_button">Cancel</string>
    <string name="scringo_text_cancel_edit_message_description">Are you sure you want to cancel editing?</string>
    <string name="scringo_text_cancel_edit_message_title">Canceling Edit</string>
    <string name="scringo_text_cancel_report_message">Are you sure you want to cancel reporting %s?</string>
    <string name="scringo_text_cancel_report_title">Cancel report</string>
    <string name="scringo_text_compose_title">Compose</string>
    <string name="scringo_text_compose_filter_hint">Who are you writing to?</string>
    <string name="scringo_text_confirm_yes_button">Yes, I\'m sure</string>
    <string name="scringo_text_connect_button">Connect</string>
    <string name="scringo_text_delete_message_description">Are you sure you want to delete this message?</string>
    <string name="scringo_text_delete_message_title">Delete Message</string>
    <string name="scringo_text_comment_delete_message">Are you sure you want to delete your comment?</string>
    <string name="scringo_text_comment_delete_title">Delete Comment</string>
    <string name="scringo_text_feedback_cancel_message">Are you sure you want to delete your feedback?</string>
    <string name="scringo_text_feedback_cancel_title">Delete Feedback</string>
    <string name="scringo_text_followers_title">Followers</string>
    <string name="scringo_text_following_title">Following</string>
    <string name="scringo_text_posts_title">Posts</string>
    <string name="scringo_text_liked_an_activity">Liked an Activity</string>
    <string name="scringo_text_make_the_most">Make the most out of %s</string>
    <string name="scringo_text_make_the_most_connect">Connect with Facebook or Twitter</string>
    <string name="scringo_text_login_to_join">Login to join the community</string>
    <string name="scringo_text_post_feedback_popup_message">We\'ll review it, and try to answer as soon as possible! You\'ll find our reply in your Messages.</string>
    <string name="scringo_text_post_feedback_popup_message_5stars">In the meantime, we\'d be happy if you could rate us in Google Play.</string>
    <string name="scringo_text_post_feedback_popup_title">Thank you for your feedback!</string>
    <string name="scringo_text_privacy_title">Share your Activities</string>
    <string name="scringo_text_radar_follow_many_message">Follow these %d people</string>
    <string name="scringo_text_radar_follow_one_message">Follow %s</string>
    <string name="scringo_text_radar_many_to_follow_message">There are %d people around you who you don\'t follow!</string>
    <string name="scringo_text_radar_one_to_follow_message">There is one person around you who you don\'t follow!</string>
    <string name="scringo_text_rate_us_button">Rate Us</string>
    <string name="scringo_text_rate_us_description">Help us grow, rate us on Google Play</string>
    <string name="scringo_text_rate_us_later_button">Later</string>
    <string name="scringo_text_rate_us_title">Rate Us</string>
    <string name="scringo_text_report_user_message">Are you sure you want to report %s?</string>
    <string name="scringo_text_report_user_title">Report User</string>
    <string name="scringo_text_reported_title">Reported</string>
    <string name="scringo_text_share_on_facebook">Share on Facebook</string>
    <string name="scringo_text_share_on_facebook_description">Post to your friends about this app!</string>
    <string name="scringo_text_share_on_twitter_description">Tweet your followers about this app!</string>
    <string name="scringo_text_share_on_twitter_title">Share on Twitter</string>
    <string name="scringo_text_sign_out_title">Sign Out</string>
    <string name="scringo_text_social_network_sign_out_message">Are you sure you want to sign out from your %s account?</string>
    <string name="scringo_text_talk_to_us_description">Feedback, Bug Report, Feature Request</string>
    <string name="scringo_text_talk_to_us_feedback">Please describe your feedback</string>
    <string name="scringo_text_talk_to_us_title">Talk to Us</string>
    <string name="scringo_text_twitter_connect_title">Connect Twitter</string>
    <string name="scringo_text_facebook_connect_title">Connect Facebook</string>
    <string name="scringo_text_twitter_connect_title_2">Twitter Connect</string>
    <string name="scringo_text_facebook_connect_title_2">Facebook Connect</string>
    <string name="scringo_text_unblock_user_message">Are you sure you want to unblock %s?</string>
    <string name="scringo_text_unblock_user_title">Unblock User</string>
    <string name="scringo_text_unblocked_title">Unblocked</string>
    <string name="scringo_text_unreported_title">Unreported</string>
    <string name="scringo_text_welcome_popup_title">Swipe to Discover More</string>
    <string name="scringo_text_welcome_popup_left">Swipe to the left to discover more out of %s</string>
    <string name="scringo_text_welcome_popup_right">Swipe to the right to discover more out of %s</string>
    <string name="scringo_text_welcome_to_app">Welcome to %s!</string>
    <string name="scringo_text_facebook_contacts">Facebook Contacts</string>
    <string name="scringo_text_facebook_friends_title">Facebook Friends</string>
    <string name="scringo_text_facebook_invite_description">Invite your facebook friends</string>
    <string name="scringo_text_facebook_title">Facebook</string>
    <string name="scringo_text_find_friends_description">Find friends from your social networks</string>
    <string name="scringo_text_find_friends_title">Find Friends</string>
    <string name="scringo_text_find_header">Find</string>
    <string name="scringo_text_follow_all_people_button">Follow All %d People</string>
    <string name="scringo_text_free_app_price">Free</string>
    <string name="scringo_text_friends_title">Friends</string>
    <string name="scringo_text_invite_header">Invite</string>
    <string name="scringo_text_joined">joined</string>
    <string name="scringo_text_commented_on">commented on</string>
    <string name="scringo_text_feed_comment_format">%s\'s Comment</string>
    <string name="scringo_text_liked">liked</string>
    <string name="scringo_text_load_earlier_messages_button">Load Earlier Messages</string>
    <string name="scringo_text_loading">Loading&#8230;</string>
    <string name="scringo_text_please_wait">Please wait&#8230;</string>
    <string name="scringo_text_people_nearby_header">People Nearby</string>
    <string name="scringo_text_pull_down_to_refresh">Pull down to refresh&#8230;</string>
    <string name="scringo_text_release_to_refresh">Release to refresh&#8230;</string>
    <string name="scringo_text_send_button">Send</string>
    <string name="scringo_text_started_following">started following</string>
    <string name="scringo_text_suggestions_description">Awesome people you should follow</string>
    <string name="scringo_text_suggestions_title">Suggestions</string>
    <string name="scringo_text_twitter_contacts">Twitter Contacts</string>
    <string name="scringo_text_twitter_friends_title">Twitter Friends</string>
    <string name="scringo_text_twitter_invite_description">Invite your Twitter friends</string>
    <string name="scringo_text_twitter_title">Twitter</string>
    <string name="scringo_text_more_title">More</string>
    <string name="scringo_text_close_button">Close</string>
    <string name="scringo_text_no_suggestions_message">There are no suggestions</string>
    <string name="scringo_text_follow_button">Follow</string>
    <string name="scringo_text_following_button">Following</string>
    <string name="scringo_text_send_feedback_title">Send Feedback</string>
    <string name="scringo_text_bug_report_title">Report a bug</string>
    <string name="scringo_text_feature_request_title">Feature Request</string>
    <string name="scringo_text_invite_button">Invite</string>
    <string name="scringo_text_follow_all_button">Follow All</string>
    <string name="scringo_text_radar_overlay_subtitle">Why not follow them?</string>
    <string name="scringo_text_radar_dont_show_button">Don\'t Show Again</string>
    <string name="scringo_text_radar_not_now_button">Not Now</string>
    <string name="scringo_text_edit_bio_title">Edit Bio</string>
    <string name="scringo_text_done_button">Done</string>
    <string name="scringo_text_search_title">Search</string>
    <string name="scringo_text_sign_in_connect_basic">Please login to %s</string>
    <string name="scringo_text_sign_in_action_like">like this activity and others</string>
    <string name="scringo_text_sign_in_action_message">message this user</string>
    <string name="scringo_text_sign_in_action_radar">see who\'s around you</string>
    <string name="scringo_text_follow_connect_message">follow this user</string>
    <string name="scringo_text_no_followers">No followers</string>
    <string name="scringo_text_one_follower">1 follower</string>
    <string name="scringo_text_many_followers">%d followers</string>
    <string name="scringo_text_and_word">and</string>
	<string name="scringo_text_messages_tab_title">Messages</string>
	<string name="scringo_text_blog_tab_title">Blog</string>
	<string name="scringo_text_activity_tab_title">Activity</string>
	<string name="scringo_text_find_and_invite_friends_tab_title">Find &amp; Invite Friends</string>
	<string name="scringo_text_feedback_tab_title">Feedback</string>
	<string name="scringo_text_more_apps_tab_title">More Apps</string>
	<string name="scringo_text_radar_tab_title">Radar</string>
	<string name="scringo_text_login">Log In</string>
	<string name="scringo_text_sign_up">Sign Up</string>
	<string name="scringo_text_settings">Settings</string>
	<string name="scringo_text_sign_up_with_email">Sign Up with Email</string>
	<string name="scringo_text_login_with_email">Login with Email</string>
	<string name="scringo_text_dont_have_an_account">Don\'t Have an Account?</string>
	<string name="scringo_text_already_have_an_account">Already Have an Account?</string>
	<string name="scringo_text_facebook_user_already_signed_up">This Facebook user is already signed up. Would you like to login?</string>
	<string name="scringo_text_facebook_user_not_found_sign_up">This Facebook user isn\'t signed up yet. Would you like to sign up using this Facebook user?</string>
	<string name="scringo_text_internal_error">Internal error</string>
	<string name="scringo_text_social_user_contradiction_title">User Clash!</string>
	<string name="scringo_text_social_user_contradiction_text">There\'s a user contradiction between devices. Would you like to set this device to use this user?</string>
	<string name="scringo_text_full_name">Full Name</string>
	<string name="scringo_text_email">Email</string>
	<string name="scringo_text_sign_up_error">Sign Up Error</string>
	<string name="scringo_text_login_error">Login Error</string>
	<string name="scringo_text_change_password">Change password</string>
	<string name="scringo_text_user_details">User Details</string>
	<string name="scringo_text_accounts">Accounts</string>
</resources>