<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="70dp"
    android:background="@drawable/scringo_dialog_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="0dp" >

    <TextView
        style="@style/whiteBoldShadowedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/scringo_text_post_feedback_popup_title"
        android:textSize="24dp" />

    <TextView
        style="@style/lightGrayShadowedText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/scringo_text_post_feedback_popup_message"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/scringoMessage"
        style="@style/lightGrayShadowedText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/scringoClose"
            style="@style/whiteBoldShadowedText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/scringo_button_high"
            android:padding="0dp"
            android:text="@string/scringo_text_close_button"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:id="@+id/scringoRateUsButton"
            android:background="@drawable/scringo_purple_button"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="0dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/scringo_feedback_rate_icon" />

            <TextView
                style="@style/whiteBoldShadowedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/scringo_text_rate_us_button"
                android:textSize="18dp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="10dp"
        android:layout_height="30dp" />

</LinearLayout>