<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/scringo_bg"
    android:padding="0dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/scringo_title_bar_no_ribbon_bg"
            android:padding="0dp" >

            <TextView
                style="@style/screenName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="7dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/scringo_text_edit_bio_title" />

            <Button
                android:id="@+id/scringoDone"
                style="@style/whiteBoldShadowedText"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:background="@drawable/scringo_blue_button"
                android:padding="0dp"
                android:textSize="14dp"
                android:text="@string/scringo_text_done_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp" >

            <EditText
                android:id="@+id/scringoBioEditText"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/scringo_white_cell"
                android:gravity="top|left"
                android:hint="@string/scringo_text_bio_text"
                android:maxLength="140"
                android:padding="5dp"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/scringoBioChars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="right" />
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/scringoProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>