<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/scringo_bg"
    android:orientation="vertical"
    android:padding="0dp" >

    <com.scringo.features.ScringoTitleBar
        android:id="@+id/scringoTitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="25dp" >

            <TextView
                style="@style/grayShadowedText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scringo_text_user_details"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/scringoImage"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/scringo_message_edit" />

                    <ProgressBar
                        android:id="@+id/scringoProgress2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:visibility="gone" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/scringoUserName"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/scringo_message_edit"
                    android:hint="@string/scringo_text_full_name"
                    android:inputType="textCapWords"
                    android:paddingBottom="0dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="0dp"
                    android:textColor="#000000"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/scringoChangePassword"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/scringo_profile_cell"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="0dp" >

                <TextView
                    style="@style/whiteShadowedText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_weight="1" 
                    android:text="@string/scringo_text_change_password"
                    />
            </LinearLayout>

            <TextView
                style="@style/grayShadowedText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/scringo_text_accounts"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/scringoPanelProfileFacebookSigned"
                    android:layout_width="match_parent"
                    android:layout_height="39dp"
                    android:background="@drawable/scringo_profile_cell"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="0dp"
                    android:visibility="gone" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/scringo_facebook_shade_icon" />

                    <TextView
                        android:id="@+id/scringoPanelProfileFacebookSignedText"
                        style="@style/whiteShadowedText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/scringoPanelProfileFacebookSignOut"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:text="@string/scringo_text_sign_out_title" />
                </LinearLayout>

                <Button
                    android:id="@+id/scringoPanelProfileFacebookConnect"
                    style="@style/whiteBoldShadowedText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/scringo_facebook_connect_big"
                    android:gravity="left|center_vertical"
                    android:paddingBottom="0dp"
                    android:paddingLeft="55dp"
                    android:paddingRight="0dp"
                    android:paddingTop="0dp"
                    android:text="@string/scringo_text_facebook_connect_title_2"
                    android:textSize="16dp" />

                <LinearLayout
                    android:id="@+id/scringoPanelProfileTwitterSigned"
                    android:layout_width="match_parent"
                    android:layout_height="39dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/scringo_profile_cell"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="0dp"
                    android:visibility="gone" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/scringo_twitter_shade_icon" />

                    <TextView
                        android:id="@+id/scringoPanelProfileTwitterSignedText"
                        style="@style/whiteShadowedText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/scringoPanelProfileTwitterSignOut"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="7dp"
                        android:text="@string/scringo_text_sign_out_title" />
                </LinearLayout>

                <Button
                    android:id="@+id/scringoPanelProfileTwitterConnect"
                    style="@style/whiteBoldShadowedText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/scringo_twitter_connect_big"
                    android:gravity="left|center_vertical"
                    android:paddingBottom="0dp"
                    android:paddingLeft="55dp"
                    android:paddingRight="0dp"
                    android:paddingTop="0dp"
                    android:text="@string/scringo_text_twitter_connect_title_2"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/scringoPanelProfileEmailSigned"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/scringo_profile_cell"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="0dp" >

                <TextView
                    android:id="@+id/scringoPanelProfileEmailSignedText"
                    style="@style/whiteShadowedText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/scringoPanelProfileEmailSignOut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:text="@string/scringo_text_sign_out_title" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/scringoProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>